[gd_scene load_steps=3 format=3 uid="uid://diuwsm1cap3pl"]

[ext_resource type="Script" uid="uid://f16oncjhp3jv" path="res://scenes/startscreen.gd" id="1_m1yxm"]
[ext_resource type="Texture2D" uid="uid://cjyxvkx7sdfn4" path="res://assets/sprites/prototype.png" id="1_qx56x"]

[node name="startscreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m1yxm")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qx56x")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "GAME NAME"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Start" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "Play"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Settings" type="Button" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 100
text = "Settings"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="VBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "Quit"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer3/Quit" to="." method="_on_quit_pressed"]
